<resources>
    <string name="app_name">JustCrypt</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="decrypt_message"><a>Decrypt Message</a></string>
    <string name="encrypt_message">Encrypt Message</string>
    <string name="recipient_phone_number">Recipient Phone Number</string>
    <string name="recipient_email">Recipient Email</string>
    <string name="enter_message">Enter Message</string>
    <string name="cryptale">KrypTale</string>
    <string name="kryptale">Kryptale</string>
    <string name="JustCrypt">JustCrypt</string>
</resources>